syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "Dto/Buddy.proto";
import "Message/WhisperMessage.proto";

package ServiceProto;

service BuddyService {
	rpc AddBuddyByName(Dto.AddBuddyRequest) returns(Dto.AddBuddyResponse);
	rpc AddBuddyById(Dto.AddBuddyByIdRequest) returns(Dto.AddBuddyResponse);
	rpc SendBuddyChat(Dto.BuddyChatRequest) returns(google.protobuf.Empty);
	rpc SendBuddfyNotice(Dto.SendBuddyNoticeMessageDto) returns(google.protobuf.Empty);
	rpc DeleteBuddy(Dto.DeleteBuddyRequest) returns(Dto.DeleteBuddyResponse);

	rpc SendWhisper(Dto.SendWhisperMessageRequest) returns(Dto.SendWhisperMessageResponse);
	rpc GetLocation(Dto.GetLocationRequest) returns(Dto.GetLocationResponse);
}